# openos

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
openos/: __init__.py  server.py
openos/core/: __init__.py  controller.py  receiver.py  streamer.py
openos/interfaces/: __init__.py  base.py  gui.py  headless.py
openos/providers/: __init__.py  base.py  docker.py  virtualbox.py  vmware.py
services/: server.py
src/: entry.sh
