[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openos"
version = "0.0.1"
description = "OpenOS is a Python interactable operating system for both human and AI agents."
authors = [
  { name="Eddy Liang", email="eddyliang216@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.1.0",
  "numpy>=1.22.0",
  "pynput>=1.7.6",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Homepage" = "https://github.com/yourusername/openos"
"Bug Tracker" = "https://github.com/yourusername/openos/issues"
